Correct spacing for extra small view portal (phone)

--- a/src/usr/local/www/css/login.css
+++ b/src/usr/local/www/css/login.css
@@ -109,7 +109,7 @@ p.form-title
 
 form.login
 {
-    width: 300px;
+    width: 270px;
     margin: 0 auto;
 }
 
